try gst-1 with horse mov

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ jobs:
             gstreamer1.0-plugins-ugly
       - matlab/install
       - matlab/run-command:
-          command: videoreadertest
+          command: makehorseproj
 
