--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
       - matlab/install
       - run: docker pull bransonlabapt/apt_docker:tf23_mmdetection
       - run: docker images
+      - run: ls -la
+      - run: pwd
       #- matlab/run-command:
       #    command: makehorseproj
 
